--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "eslint": "^9.15.0",
     "husky": "^9.1.7",
     "prettier": "^3.1.1",
