--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -41,6 +41,16 @@ jobs:
         continue-on-error: true
         run: pnpm test
 
+      - name: Run type checking
+        id: run-typecheck
+        continue-on-error: true
+        run: pnpm typecheck
+
+      - name: Run linting
+        id: run-lint
+        continue-on-error: true
+        run: pnpm lint
+
       - name: Get current timestamp
         id: timestamp
         run: echo "date=$(date +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_OUTPUT
@@ -48,7 +58,7 @@ jobs:
       - name: Check for changes in package files
         id: check-changes
         run: |
-          if git diff --exit-code pnpm-lock.yaml */package.json; then
+          if git diff --exit-code pnpm-lock.yaml **/package.json package.json; then
             echo "changes=false" >> $GITHUB_OUTPUT
           else
             echo "changes=true" >> $GITHUB_OUTPUT
