--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test:unit": "vitest run",
+    "test:unit:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
     "api:lint": "spectral lint openapi.yaml",
     "api:lint:json": "spectral lint openapi.yaml --format json",
@@ -45,6 +46,7 @@
     "@types/pg": "^8.15.6",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
+    "@vitest/coverage-v8": "^4.0.15",
     "@vitest/eslint-plugin": "^1.5.1",
     "drizzle-kit": "^0.31.7",
     "eslint": "^9.39.1",
