--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "turbo lint:fix",
     "test": "turbo test:unit",
     "test:unit": "turbo test:unit",
+    "test:unit:coverage": "turbo test:unit:coverage",
     "test:e2e": "turbo test:e2e",
     "typecheck": "turbo typecheck",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
