--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -35,7 +35,9 @@
     "next": "^16.0.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "streamdown": "^1.6.10"
+    "shiki": "^3.19.0",
+    "streamdown": "^1.6.10",
+    "uuidv7": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
