--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,10 +20,11 @@
     "api:lint:json": "spectral lint openapi.yaml --format json",
     "api:docs": "echo 'API docs available at http://localhost:3000/docs when server is running'",
     "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:apply": "docker exec -i level2gym-postgres psql -U postgres -d level2gym < drizzle/0000_mean_moondragon.sql",
+    "db:push": "drizzle-kit push",
     "db:drop": "docker exec -i level2gym-postgres psql -U postgres -d level2gym < drizzle/drop_all_tables.sql",
-    "db:reset": "pnpm db:drop && pnpm db:apply"
+    "db:reset": "pnpm db:drop && pnpm db:push"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.44",
