--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^19.2.1",
     "shiki": "^3.19.0",
     "streamdown": "^1.6.10",
-    "uuidv7": "^1.1.0"
+    "uuidv7": "^1.1.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
